# my-ai-tools

./: README.md  mcp_bridge.py  pyproject.toml  requirements.txt
docs/: Agent - Context Management - Memory.md  Agent - Execution - Logic And Tool.md  Architecture.md  Dev.md  Idea-LocalLLM-With-Cursor.md  Idea-Prompt-DB.md  Learnings.md  Scratchpad.md  Workflows.md
my_ai_tools/: __init__.py  cli.py  ollama_client.py
my_ai_tools/agents/: __init__.py  hello_world.py  plan_auto.py  plan_auto_anthropic.py  plan_auto_ollama.py  plan_interactive.py  plan_with_cursor.py  plan_with_ollama.py  plan_with_ollama_llm.py  planning_common.py  pr_review.py  principal_flow.py  principal_flow_llm.py
prompt-vault/: INDEX.md  _template.md
prompt-vault/prompts/: agent-check-code.md  agent-wf-code-check.md  agent-write-code-from-spec.md  pr-review.md
prompts/: Prompt-PR-Review.md
scripts/: git-utils.sh  plan_cli.py  verify_agents.py  verify_plan_auto.py  verify_plan_interactive.py
specs/: Multi-Agent-Flow-Brainstorm.md  Self-Correction-Cycle-Prompt-Critique.md
