[project]
name = "my-ai-tools"
version = "0.1.0"
description = "AI tools with Jupyter, LangGraph, and local Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "ollama",
    "fastmcp",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ui = [
    "streamlit",
]

[project.scripts]
check = "my_ai_tools.cli:check"
tests = "my_ai_tools.cli:tests"
notebook = "my_ai_tools.cli:jupyter"
ollama-serve = "my_ai_tools.cli:ollama_serve"
mcp-bridge = "my_ai_tools.cli:mcp_bridge"
agent-inspector = "my_ai_tools.apps.execution_inspector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ollama: requires local Ollama running and OLLAMA_MODEL pulled",
]